@@ -1,3 +1,7 @@
+2021-04-04 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Add support for number suffix k (e.g. 2k = 2000)
+
 2021-03-27 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Add support for d(f(x))/dx syntax (equivalent to diff(f(x),x))
